--- a/Informacion/marco-legal.html
+++ b/Informacion/marco-legal.html
@@ -33,6 +33,7 @@
       }
     }
   </script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="font-sans bg-cura-primary text-white overflow-x-hidden flex flex-col min-h-screen">
 
@@ -55,13 +56,13 @@
   </header>
 
   <main class="max-w-5xl mx-auto px-6 py-12">
-    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight">
+    <nav class="mb-8 flex items-center gap-2 text-sm text-cura-accentLight" data-aos="fade-down">
       <a href="/Informacion/informacion" class="hover:underline text-cura-accentLight">Información</a>
       <span>/</span>
       <span class="text-white font-semibold">Marco Legal</span>
     </nav>
 
-    <div class="mb-12 text-center md:text-left">
+    <div class="mb-12 text-center md:text-left" data-aos="fade-up">
       <h1 class="text-3xl md:text-5xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
         Marco Legal
       </h1>
@@ -72,83 +73,97 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-gavel text-cura-accent text-2xl"></i>
-          1. Declaración de Orden Público
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La Ley C.U.R.A. se establece como una norma de <strong>Orden Público</strong> en todo lo referente a la portabilidad de datos, interoperabilidad y estándares de ciberseguridad. Esto garantiza que el derecho del ciudadano a poseer su historia clínica digital es superior a cualquier normativa local o institucional, siendo de aplicación obligatoria en todo el territorio nacional de conformidad con la Constitución Nacional.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="100">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-gavel text-cura-accent text-2xl"></i>
+            1. Declaración de Orden Público
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            La Ley C.U.R.A. se establece como una norma de <strong>Orden Público</strong>. El derecho del ciudadano a poseer su historia clínica digital es superior a cualquier normativa local, siendo de aplicación obligatoria en todo el territorio nacional.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-scales text-cura-accent text-2xl"></i>
-          2. Ejecución de la Ley 27.706
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          El sistema constituye el mecanismo técnico y operativo oficial para dar cumplimiento efectivo a la Ley Nacional de Historia Clínica Electrónica (27.706). C.U.R.A. transforma la "voluntad digital" de legislaciones previas en un estándar técnico vinculante, unificando el <strong>Sistema Único de Registro de Historias Clínicas Electrónicas (S.U.R.H.C.E.)</strong>.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="200">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-scales text-cura-accent text-2xl"></i>
+            2. Ejecución de la Ley 27.706
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            El sistema constituye el mecanismo técnico oficial para dar cumplimiento efectivo a la Ley 27.706. Transforma la "voluntad digital" en un estándar técnico vinculante, unificando el <strong>S.U.R.H.C.E.</strong>.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
-          3. Federalismo de Concertación
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          En sintonía con el <strong>Pacto de Mayo</strong>, el proyecto se apoya en la institucionalidad del <strong>Consejo de Mayo</strong> como catalizador del federalismo moderno. Bajo el principio de <strong>Federalismo de Concertación</strong>, se invita a las provincias a adherir voluntariamente para alcanzar el equilibrio fiscal y la modernización administrativa, respetando sus autonomías pero unificando la "autopista digital" sanitaria.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="300">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-handshake text-cura-accent text-2xl"></i>
+            3. Federalismo de Concertación
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Bajo el principio de <strong>Federalismo de Concertación</strong>, se invita a las provincias a adherir voluntariamente para alcanzar el equilibrio fiscal y la modernización administrativa, respetando sus autonomías locales.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-globe text-cura-accent text-2xl"></i>
-          4. Soberanía Sanitaria Digital
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          El marco legal impone la <strong>Residencia Obligatoria de Datos</strong> en territorio argentino. La infraestructura técnica debe ser provista de forma exclusiva por <strong>ARSAT</strong>, blindando la información sensible de los ciudadanos contra jurisdicciones extranjeras y garantizando que la soberanía tecnológica sea una política de Estado innegociable.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="400">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-globe text-cura-accent text-2xl"></i>
+            4. Soberanía Sanitaria Digital
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            El marco legal impone la <strong>Residencia Obligatoria de Datos</strong> en territorio argentino. La infraestructura técnica es provista de forma exclusiva por <strong>ARSAT</strong>, blindando la información contra jurisdicciones extranjeras.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
-          5. Inmutabilidad y Respaldo Jurídico
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          Se otorga validez legal absoluta a los registros digitales integrados. Mediante el uso de <strong>Blockchain y Firma Digital</strong>, cada acto médico cuenta con un respaldo documental inalterable. Esto protege tanto al paciente como al profesional, eliminando la precariedad de los registros físicos o sistemas analógicos fácilmente adulterables.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="500">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-cube text-cura-accent text-2xl"></i>
+            5. Inmutabilidad y Respaldo Jurídico
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Mediante el uso de <strong>Blockchain y Firma Digital</strong>, cada acto médico cuenta con un respaldo inalterable. Esto protege tanto al paciente como al profesional, eliminando la precariedad de los registros físicos.
+          </p>
+        </div>
       </div>
 
-      <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-1">
-        <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
-          <i class="ph-bold ph-shield-checkered text-cura-accent text-2xl"></i>
-          6. Protección de Datos Personales
-        </h3>
-        <p class="text-sm text-cura-accentLight leading-relaxed">
-          La ley refuerza los preceptos de la <strong>Ley 25.326</strong>, incorporando el principio de <strong>Privacidad por Diseño</strong>. Queda prohibido el uso de la información clínica para fines comerciales o políticos, estableciendo sanciones gravísimas y responsabilidad civil y penal para cualquier actor que vulnere la confidencialidad de los datos sanitarios.
-        </p>
+      <div data-aos="fade-up" data-aos-delay="600">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/30 p-6 shadow-xl transition-all duration-300 hover:border-cura-accent/70 hover:-translate-y-2 hover:shadow-cura-accent/20 h-full">
+          <h3 class="text-lg font-bold text-white mb-3 flex items-center gap-3">
+            <i class="ph-bold ph-shield-checkered text-cura-accent text-2xl"></i>
+            6. Protección de Datos Personales
+          </h3>
+          <p class="text-sm text-cura-accentLight leading-relaxed">
+            Refuerza la <strong>Ley 25.326</strong> con el principio de Privacidad por Diseño. Prohíbe el uso comercial o político de los datos, estableciendo sanciones gravísimas para quien vulnere la confidencialidad.
+          </p>
+        </div>
       </div>
 
-      <div class="md:col-span-2 bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-1">
-        <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
-          <i class="ph-bold ph-chart-line-up text-cura-accent text-3xl"></i>
-          7. Máxima Eficiencia y Transparencia
-        </h3>
-        <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
-          El marco legal obliga a la <strong>Autoridad de Aplicación</strong> a publicar auditorías trimestrales de ejecución presupuestaria y métricas de ahorro operativo. La ley garantiza que el sistema sea autosostenible mediante la reinversión del <strong>100% de los ahorros</strong> generados por la despapelización y la eliminación de fraudes operativos en el sector público.
-        </p>
+      <div class="md:col-span-2" data-aos="zoom-in" data-aos-delay="700">
+        <div class="bg-cura-card rounded-2xl border border-cura-accent/40 p-8 shadow-xl transition-all duration-300 hover:border-cura-accent hover:-translate-y-2 hover:shadow-cura-accent/10">
+          <h3 class="text-xl font-bold text-white mb-4 flex items-center gap-3">
+            <i class="ph-bold ph-chart-line-up text-cura-accent text-3xl"></i>
+            7. Máxima Eficiencia y Transparencia
+          </h3>
+          <p class="text-sm md:text-base text-cura-accentLight leading-relaxed">
+            La ley obliga a publicar auditorías trimestrales. El sistema se garantiza como autosostenible mediante la reinversión del <strong>100% de los ahorros</strong> generados por la despapelización y la eliminación de fraudes operativos.
+          </p>
+        </div>
       </div>
 
     </div>
 
     <div class="mt-12 pt-8 border-t border-white/10 flex flex-col sm:flex-row items-center justify-between gap-6 text-center sm:text-left">
-      <p class="text-cura-accentLight text-sm italic">Hacia una seguridad jurídica digital definitiva.</p>
-      <a href="/Informacion/alcance" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition">
+      <p class="text-cura-accentLight text-sm italic" data-aos="fade-left">Hacia una seguridad jurídica digital definitiva.</p>
+      <a href="/Informacion/alcance" class="flex items-center gap-2 text-sm font-semibold text-cura-accent hover:text-white transition group">
         Siguiente: Alcance Federal
-        <i class="ph-bold ph-arrow-right"></i>
+        <i class="ph-bold ph-arrow-right transition-transform group-hover:translate-x-1"></i>
       </a>
     </div>
   </main>
@@ -156,19 +171,36 @@
   <footer class="py-12 border-t border-white/10 text-center mt-auto">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
-<script>
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
-  });
 
-  function raf(time) {
-    lenis.raf(time);
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    // Inicializar Lenis (Scroll Suave)
+    const lenis = new Lenis({
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smoothWheel: true
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
     requestAnimationFrame(raf);
-  }
-  requestAnimationFrame(raf);
-</script>
+
+    // Inicializar AOS con sincronización
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 50,
+        anchorPlacement: 'top-bottom'
+      });
+
+      // Sincronizar AOS con Lenis
+      lenis.on('scroll', AOS.refresh);
+    });
+  </script>
 </body>
 </html>
