--- a/Informacion/recursos.html
+++ b/Informacion/recursos.html
@@ -2,10 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-<link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-<link rel="shortcut icon" href="/favicon.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest">
   <title>Recursos | Ley C.U.R.A.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,6 +28,7 @@
       }
     }
   </script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <style>
     body { background-color: #004E85; }
     .glass-card {
@@ -40,10 +41,15 @@
       border: 1px dashed rgba(255, 255, 255, 0.1);
       cursor: not-allowed;
     }
+    /* Animación sutil para candados */
+    .coming-soon:hover svg {
+      transform: scale(1.1);
+      opacity: 0.5;
+    }
+    svg { transition: all 0.3s ease; }
   </style>
 </head>
-<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark">
-
+<body class="text-white font-sans selection:bg-cura-accent selection:text-cura-primaryDark overflow-x-hidden">
 
  <header class="sticky top-0 z-30 bg-cura-primaryDark text-white border-b border-cura-accent/40 shadow-sm">
     <div class="max-w-5xl mx-auto px-4 py-3 flex flex-col sm:flex-row gap-3 sm:gap-4 sm:items-center sm:justify-between">
@@ -64,8 +70,8 @@
   </header>
 
   <main class="max-w-4xl mx-auto px-6 py-12">
-    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl">
-      <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-10">
+    <div class="glass-card rounded-3xl p-8 md:p-12 shadow-2xl" data-aos="zoom-in" data-aos-duration="1000">
+      <div class="flex flex-col md:flex-row md:items-center justify-between gap-4 mb-10" data-aos="fade-up" data-aos-delay="200">
         <h1 class="text-4xl md:text-5xl font-extrabold bg-clip-text text-transparent bg-gradient-to-r from-white to-cura-accentLight">
           Recursos
         </h1>
@@ -74,77 +80,102 @@
         </span>
       </div>
 
-      <p class="text-white/80 leading-relaxed mb-10 max-w-2xl">
+      <p class="text-white/80 leading-relaxed mb-10 max-w-2xl" data-aos="fade-up" data-aos-delay="300">
         Ponemos a disposición la documentación técnica y legal del Sistema C.U.R.A. para garantizar el acceso público y la auditoría ciudadana del ecosistema sanitario.
       </p>
 
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         
-        <a href="documentos/Resumen_Ejecutivo.pdf" download class="group flex items-center justify-between p-6 bg-cura-accent/10 border border-cura-accent/30 rounded-2xl hover:bg-cura-accent hover:border-cura-accent transition-all duration-300">
-          <div>
-            <p class="text-[10px] font-bold uppercase tracking-widest text-cura-accent group-hover:text-cura-primaryDark">PDF Disponible</p>
-            <h3 class="text-xl font-bold group-hover:text-cura-primaryDark">Resumen Ejecutivo</h3>
-            <p class="text-sm opacity-60 group-hover:text-cura-primaryDark/80">Estrategia, arquitectura y financiamiento</p>
-          </div>
-          <div class="bg-cura-accent text-cura-primaryDark p-3 rounded-full group-hover:bg-white transition-colors">
-            <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
-          </div>
-        </a>
-
-        <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
-          <div>
-            <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
-            <h3 class="text-xl font-bold text-white/40">Marco Normativo</h3>
-            <p class="text-sm text-white/20">Texto completo de la Ley</p>
-          </div>
-          <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
+        <div data-aos="fade-up" data-aos-delay="400">
+          <a href="documentos/Resumen_Ejecutivo.pdf" download class="group flex items-center justify-between p-6 bg-cura-accent/10 border border-cura-accent/30 rounded-2xl hover:bg-cura-accent hover:border-cura-accent transition-all duration-300 hover:-translate-y-1">
+            <div>
+              <p class="text-[10px] font-bold uppercase tracking-widest text-cura-accent group-hover:text-cura-primaryDark">PDF Disponible</p>
+              <h3 class="text-xl font-bold group-hover:text-cura-primaryDark">Resumen Ejecutivo</h3>
+              <p class="text-sm opacity-60 group-hover:text-cura-primaryDark/80">Estrategia, arquitectura y financiamiento</p>
+            </div>
+            <div class="bg-cura-accent text-cura-primaryDark p-3 rounded-full group-hover:bg-white transition-colors">
+              <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1m-4-4l-4 4m0 0l-4-4m4 4V4"/></svg>
+            </div>
+          </a>
         </div>
 
-        <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
-          <div>
-            <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
-            <h3 class="text-xl font-bold text-white/40">Biblioteca Técnica</h3>
-            <p class="text-sm text-white/20">Guías HL7 FHIR y SNOMED CT</p>
+        <div data-aos="fade-up" data-aos-delay="500">
+          <div class="coming-soon p-6 rounded-2xl flex items-center justify-between h-full">
+            <div>
+              <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
+              <h3 class="text-xl font-bold text-white/40">Marco Normativo</h3>
+              <p class="text-sm text-white/20">Texto completo de la Ley</p>
+            </div>
+            <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
           </div>
-          <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
         </div>
 
-        <div class="coming-soon p-6 rounded-2xl flex items-center justify-between">
-          <div>
-            <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
-            <h3 class="text-xl font-bold text-white/40">Material audiovisual</h3>
-            <p class="text-sm text-white/20">Conferencias y videos explicativos.</p>
+        <div data-aos="fade-up" data-aos-delay="600">
+          <div class="coming-soon p-6 rounded-2xl flex items-center justify-between h-full">
+            <div>
+              <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
+              <h3 class="text-xl font-bold text-white/40">Biblioteca Técnica</h3>
+              <p class="text-sm text-white/20">Guías HL7 FHIR y SNOMED CT</p>
+            </div>
+            <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
           </div>
-          <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
+        </div>
+
+        <div data-aos="fade-up" data-aos-delay="700">
+          <div class="coming-soon p-6 rounded-2xl flex items-center justify-between h-full">
+            <div>
+              <p class="text-[10px] font-bold uppercase tracking-widest text-white/30">Próximamente</p>
+              <h3 class="text-xl font-bold text-white/40">Material audiovisual</h3>
+              <p class="text-sm text-white/20">Conferencias y videos explicativos.</p>
+            </div>
+            <svg class="w-6 h-6 text-white/20" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 15v2m-6 4h12a2 2 0 002-2v-6a2 2 0 00-2-2H6a2 2 0 00-2 2v6a2 2 0 002 2zm10-10V7a4 4 0 00-8 0v4h8z"/></svg>
+          </div>
         </div>
 
       </div>
 
-      <div class="mt-12 pt-8 border-t border-white/10 text-center">
-        <a href="/Informacion/informacion" class="inline-flex items-center gap-2 text-sm font-semibold text-cura-accentLight hover:text-white transition">
-          <svg class="w-4 h-4 rotate-180" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
+      <div class="mt-12 pt-8 border-t border-white/10 text-center" data-aos="fade-up" data-aos-delay="800">
+        <a href="/Informacion/informacion" class="inline-flex items-center gap-2 text-sm font-semibold text-cura-accentLight hover:text-white transition group">
+          <svg class="w-4 h-4 rotate-180 transition-transform group-hover:translate-x-1" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/></svg>
           Volver al índice de información
         </a>
       </div>
     </div>
   </main>
 
-  <footer class="py-12 text-center">
+  <footer class="py-12 text-center" data-aos="fade-in" data-aos-delay="900">
     <p class="text-sm text-white/40">Copyright © 2026 C.U.R.A. - Todos los derechos reservados.</p>
   </footer>
-<script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
-<script>
-  const lenis = new Lenis({
-    duration: 1.2,
-    easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
-    smoothWheel: true
-  });
 
-  function raf(time) {
-    lenis.raf(time);
+  <script src="https://unpkg.com/lenis@1.1.13/dist/lenis.min.js"></script> 
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+  <script>
+    // Inicializar Lenis (Scroll Suave)
+    const lenis = new Lenis({
+      duration: 1.2,
+      easing: (t) => Math.min(1, 1.001 - Math.pow(2, -10 * t)),
+      smoothWheel: true
+    });
+
+    function raf(time) {
+      lenis.raf(time);
+      requestAnimationFrame(raf);
+    }
     requestAnimationFrame(raf);
-  }
-  requestAnimationFrame(raf);
-</script>
+
+    // Inicializar AOS con sincronización
+    document.addEventListener('DOMContentLoaded', function() {
+      AOS.init({
+        duration: 800,
+        once: true,
+        offset: 50,
+        anchorPlacement: 'top-bottom'
+      });
+
+      // Refrescar AOS cuando Lenis hace scroll
+      lenis.on('scroll', AOS.refresh);
+    });
+  </script>
 </body>
 </html>
